@@ -36,6 +36,7 @@ IN DEVELOPMENT ======= 1.7.3
 
 - replaced: (IMPORTANT) `uri` to `url` in F.problems, F.changes, F.errors (saves memory)
 
+- improved: U.removeDiacritics() -> increase about 30%
 - improved: handling files
 - improved: auto-image-resizer (routes)
 - improved: Image.miniature() -> increase about 50%
